--- a/package.json
+++ b/package.json
@@ -20,36 +20,36 @@
     "@angular/platform-browser": "~9.0.0-next.2",
     "@angular/platform-browser-dynamic": "~9.0.0-next.2",
     "@angular/router": "~9.0.0-next.2",
-    "@nebular/eva-icons": "^4.0.0-rc.8",
-    "@nebular/theme": "^4.1.3",
+    "@nebular/eva-icons": "^4.2.0",
+    "@nebular/theme": "^4.2.0",
     "angular-cli-ghpages": "^0.6.0-rc.2",
-    "core-js": "^2.5.4",
+    "core-js": "^3.2.1",
     "eva-icons": "^1.1.1",
     "nebular-icons": "^1.1.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.0",
     "@angular/cli": "~8.3.0",
     "@angular/compiler-cli": "~9.0.0-next.2",
     "@angular/language-service": "~9.0.0-next.2",
-    "@schematics/angular": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
+    "@schematics/angular": "~8.3.0",
+    "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "~12.7.2",
+    "codelyzer": "^5.1.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.19.0",
     "typescript": "~3.5.3"
   }
 }
