--- a/package.json
+++ b/package.json
@@ -11,30 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-next.2",
-    "@angular/cdk": "^8.1.3",
-    "@angular/common": "~9.0.0-next.2",
-    "@angular/compiler": "~9.0.0-next.2",
-    "@angular/core": "~9.0.0-next.2",
-    "@angular/forms": "~9.0.0-next.2",
-    "@angular/platform-browser": "~9.0.0-next.2",
-    "@angular/platform-browser-dynamic": "~9.0.0-next.2",
-    "@angular/router": "~9.0.0-next.2",
-    "@nebular/eva-icons": "^4.2.0",
-    "@nebular/theme": "^4.2.0",
+    "@angular/animations": "~9.0.2",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~9.0.2",
+    "@angular/compiler": "~9.0.2",
+    "@angular/core": "~9.0.2",
+    "@angular/forms": "~9.0.2",
+    "@angular/platform-browser": "~9.0.2",
+    "@angular/platform-browser-dynamic": "~9.0.2",
+    "@angular/router": "~9.0.2",
+    "@nebular/eva-icons": "^4.6.0",
+    "@nebular/theme": "^4.6.0",
     "angular-cli-ghpages": "^0.6.0-rc.2",
     "core-js": "^3.2.1",
     "eva-icons": "^1.1.1",
     "nebular-icons": "^1.1.0",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "rxjs": "~6.5.4",
+    "serialize-javascript": "^3.0.0",
+    "tslib": "^1.11.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.0",
-    "@angular/cli": "~8.3.0",
-    "@angular/compiler-cli": "~9.0.0-next.2",
-    "@angular/language-service": "~9.0.0-next.2",
+    "@angular-devkit/build-angular": "~0.900.3",
+    "@angular/cli": "~9.0.3",
+    "@angular/compiler-cli": "~9.0.2",
+    "@angular/language-service": "~9.0.2",
     "@schematics/angular": "~8.3.0",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
@@ -50,6 +51,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.19.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   }
 }
