--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "~9.0.2",
     "@nebular/eva-icons": "^4.6.0",
     "@nebular/theme": "^4.6.0",
-    "angular-cli-ghpages": "^0.6.0-rc.2",
+    "angular-cli-ghpages": "^0.6.2",
     "core-js": "^3.2.1",
     "eva-icons": "^1.1.1",
     "nebular-icons": "^1.1.0",
